syntax="proto2";

package org.dst.rpc.protobuf;

import "common_pb.proto";

option java_package="org.dst.rpc.protobuf.generated";
option java_outer_classname="ListProtocol";
option cc_generic_services = true;

message PutRequest {
    required string key = 1;
    repeated string values = 2;
}

message PutResponse {
    required Status status = 1;
}

// The type of a `get` request.
//
// GET_ALL indicates we should get all of the values of the specific key.
// GET_ONE indicates we should get a value of the specific index.
// GET_RANGE indicates that we should get the values of a range index.
enum GetType {
    GET_ALL = 0;
    GET_ONE = 1;
    GET_RANGE = 2;
};

// TODO(qwang): comment on this.
message GetRequest {
    required GetType type = 1;
    required string key = 2;
    optional int32 index = 3;
    optional int32 from = 4;
    optional int32 end = 5;
}

message GetResponse {
    required Status status = 1;
    repeated string values = 2;
}

message LPutRequest {
    required string key = 1;
    repeated string values = 2;
}

message LPutResponse {
    required Status status = 1;
}

message RPutRequest {
    required string key = 1;
    repeated string values = 2;
}

message RPutResponse {
    required Status status = 1;
}

//The type of a 'delete' request
//
// DeleteOne indicates we should delete a element of the specific index.
// DeleteRange indicates we should delete the elements of a range index.
enum DeleteType {
    DeleteOne = 1;
    DeleteRange = 2;
}

message DeleteRequest {
    required DeleteType type = 1;
    required string key = 2;
    optional int32 index = 3;
    optional int32 from = 4;
    optional int32 end = 5;
}

message DeleteResponse {
    required Status status = 1;
}


message MDeleteRequest {
    required string key = 1;
    repeated int32 index = 2;
}

message MDeleteResponse {
    required Status status = 1;
}

service DstListService {
    rpc put(PutRequest) returns (PutResponse);
    rpc get(GetRequest) returns (GetResponse);
    rpc lput(LPutRequest) returns (LPutResponse);
    rpc rput(RPutRequest) returns (RPutResponse);
    rpc delete(DeleteRequest) returns (DeleteResponse);
    rpc mdelete(MDeleteRequest) returns (MDeleteResponse);
    rpc drop(DropRequest) returns (DropResponse);
}
